--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack -w"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "tmi.js": "^1.1.1"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.2"
   }
 }
