--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.16.4",
     "tmi.js": "^1.1.1"
   },
   "devDependencies": {
